--- a/src/App.module.css
+++ b/src/App.module.css
@@ -16,6 +16,7 @@ body {
   min-height: 100vh;
 
   font-family: Roboto, sans-serif;
+  color: var(--text-primary-color);
 }
 
 body {
@@ -25,6 +26,8 @@ body {
 h1 {
   font-size: 32px;
   margin-bottom: 18px;
+
+  text-align: center;
 }
 
 h2 {
