--- a/src/Pages/Auth/AuthForm/AuthForm.module.css
+++ b/src/Pages/Auth/AuthForm/AuthForm.module.css
@@ -3,8 +3,14 @@
   flex-direction: column;
   align-items: center;
 
-  padding: 45px 90px;
+  padding: 45px;
 
   background: var(--bg-secondary-color);
   border-radius: 25px;
+}
+
+.header {
+  margin-bottom: 22px;
+
+  font-size: 28px;
 }
