feat: add Tabs component

--- a/src/Pages/Auth/AuthPage.module.css
+++ b/src/Pages/Auth/AuthPage.module.css
@@ -2,8 +2,15 @@
   padding: 16px;
 }
 
-.authForm {
-  max-width: 500px;
+.formWrapper {
+  display: flex;
+  flex-direction: column;
+
+  max-width: 700px;
 
   margin: 30px auto 0;
+  padding: 45px;
+
+  background: var(--bg-secondary-color);
+  border-radius: 25px;
 }
