feat: add recover password page

--- a/src/Pages/Auth/AuthPage.module.css
+++ b/src/Pages/Auth/AuthPage.module.css
@@ -10,6 +10,7 @@
 
   margin: 30px auto 0;
   padding: 45px;
+  padding-bottom: 55px;
 
   background: var(--bg-secondary-color);
   border-radius: 25px;
