--- a/src/Pages/Content/ContentPage.module.css
+++ b/src/Pages/Content/ContentPage.module.css
@@ -1,3 +1,12 @@
 .wrapper {
   padding: 16px;
 }
+
+.description {
+  font-size: 24px;
+  text-align: center;
+}
+
+.button {
+  margin: 20px auto 0;
+}
