feat: add more content for NotFound page

--- a/src/Pages/NotFound/NotFoundPage.module.css
+++ b/src/Pages/NotFound/NotFoundPage.module.css
@@ -1,3 +1,26 @@
 .wrapper {
   padding: 16px;
 }
+
+.description {
+  margin-bottom: 22px;
+
+  font-size: 24px;
+  text-align: center;
+}
+
+.link {
+  display: block;
+
+  width: max-content;
+
+  margin: 12px auto 0;
+
+  text-decoration: none;
+  font-size: 20px;
+  color: var(--accent-color);
+}
+
+.link:hover {
+  color: var(--text-primary-color);
+}
