fix: accessibility improvements

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,7 +3,7 @@
   --bg-secondary-color: #2e3250;
   --accent-color: #f9b17a;
   --text-primary-color: #fff;
-  --text-secondary-color: #636b98;
+  --text-secondary-color: #9ca4cc;
   --success-color: #60d450;
   --error-color: #ce6c69;
 }
