feat: add styles for mobile version

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,6 +6,7 @@
   --text-secondary-color: #9ca4cc;
   --success-color: #60d450;
   --error-color: #ce6c69;
+  --mobile: 700px;
 }
 
 .main {
@@ -34,6 +35,13 @@ h1 {
 
 h2 {
   font-size: 18px;
+}
+
+@media (max-width: 700px) {
+  h1 {
+    font-size: 22px;
+    margin-bottom: 22px;
+  }
 }
 
 /* css reset */
