--- a/src/ui/Input/PasswordInput.module.css
+++ b/src/ui/Input/PasswordInput.module.css
@@ -21,3 +21,10 @@
   color: var(--text-primary-color);
   opacity: 0.8;
 }
+
+@media (max-width: 700px) {
+  .iconBtn {
+    width: 30px;
+    height: 40px;
+  }
+}
