--- a/src/Pages/Auth/AuthPage.module.css
+++ b/src/Pages/Auth/AuthPage.module.css
@@ -1,7 +1,3 @@
-.wrapper {
-  padding: 16px;
-}
-
 .formWrapper {
   display: flex;
   flex-direction: column;
@@ -9,9 +5,14 @@
   max-width: 700px;
 
   margin: 30px auto 0;
-  padding: 45px;
-  padding-bottom: 55px;
+  padding: 45px 45px 55px;
 
   background: var(--bg-secondary-color);
   border-radius: 25px;
+}
+
+@media (max-width: 700px) {
+  .formWrapper {
+    padding: 30px 30px 40px;
+  }
 }
