--- a/src/Pages/Content/ContentPage.module.css
+++ b/src/Pages/Content/ContentPage.module.css
@@ -17,3 +17,13 @@
   text-align: center;
   font-size: 28px;
 }
+
+@media (max-width: 700px) {
+  .description {
+    font-size: 18px;
+  }
+
+  .email {
+    font-size: 24px;
+  }
+}
