--- a/src/Pages/RecoverPassword/RecoverPasswordForm/RecoverPasswordForm.module.css
+++ b/src/Pages/RecoverPassword/RecoverPasswordForm/RecoverPasswordForm.module.css
@@ -34,3 +34,17 @@
 .errorMessage {
   margin-bottom: 32px;
 }
+
+@media (max-width: 700px) {
+  .wrapper {
+    padding: 30px;
+  }
+
+  .link {
+    font-size: 16px;
+  }
+
+  .header {
+    font-size: 22px;
+  }
+}
