--- a/src/ui/Button/Button.module.css
+++ b/src/ui/Button/Button.module.css
@@ -3,9 +3,9 @@
   justify-content: center;
   align-items: center;
 
-  padding: 5px 15px;
+  padding: 15px 35px;
 
-  font-size: 24px;
+  font-size: 28px;
   font-weight: 600;
 
   cursor: pointer;
@@ -46,4 +46,12 @@
   background: transparent;
 
   color: var(--accent-color);
+}
+
+@media (max-width: 700px) {
+  .button {
+    padding: 10px 25px;
+
+    font-size: 18px;
+  }
 }
