--- a/src/ui/Input/Input.module.css
+++ b/src/ui/Input/Input.module.css
@@ -13,8 +13,7 @@
   text-align: left;
 }
 
-.input,
-.input:active {
+.input {
   width: 100%;
   height: 80px;
 
@@ -59,4 +58,30 @@
 
 .rightIconWrapper:empty {
   display: none;
+}
+
+@media (max-width: 700px) {
+  .input {
+    height: 50px;
+    padding: 10px;
+
+    font-size: 18px;
+  }
+
+  .labelWrapper {
+    margin-bottom: 8px;
+  }
+
+  .label {
+    font-size: 18px;
+  }
+
+  .hint {
+    font-size: 16px;
+  }
+
+  .rightIconWrapper svg {
+    width: 30px;
+    height: 30px;
+  }
 }
